--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 }
 body{
     font-family: sans-serif;
+    background:#f5f5f5;
 }
 .header{
     padding-top: 6px;
@@ -104,4 +105,48 @@ body{
     height: 16px;
     background:#003a8c;
     margin-right: 12px;
+}
+.container{
+    max-width: 1200px;
+    margin: auto;
+}
+.menu-sidebar{
+    margin-top: 18px;
+    max-width: 192px;
+}
+.menu-sidebar .user-avatar{
+    width: 24px;
+    height: 24px;
+}
+.menu-sidebar .user-name{
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 22px;
+    color: #262626;
+}
+.nav-group{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 12px;
+    margin-bottom: 12px;
+}
+.nav-link{
+    padding: 4px 8px;
+    display: flex;
+    align-items: center;
+    border-radius: 4px;
+    text-decoration: none;
+    color:#595959;
+    line-height: 22px;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 22px;
+}
+.nav-link.active{
+    background: #ffffff;
+    color:#262626;
+}
+.nav-text{
+    margin-left: 8px;
 }
